<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp"
    android:background="@drawable/gradient_background">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/initial_title"
        app:layout_constraintEnd_toStartOf="@id/reg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="50dp"
        android:id="@+id/initial_text1"
        />

    <TextView
        android:id="@+id/reg"
        android:layout_marginTop="20dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/initial_title1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/light_blue"/>


    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textfield1"
        >




    </TextView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv3"
        app:layout_constraintEnd_toEndOf="parent"
        >




    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textfield1"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter username"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:id="@+id/textfield2"
        android:layout_marginHorizontal="20dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
app:endIconMode="password_toggle"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textfield1"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="password"
            android:id="@+id/passwordEditText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title4"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/textfield2"
        app:layout_constraintEnd_toEndOf="parent">

    </TextView>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textview3"
        android:hint="Sign in"
        android:backgroundTint="@color/light_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/button1"
        >

    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title5"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/textview4"

        ></TextView>

    <ImageButton
        android:id="@+id/imbt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_apple"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"></ImageButton>
    <ImageButton
        android:id="@+id/imbt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_icons8_facebook"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintStart_toEndOf="@id/textview4"
        android:layout_marginTop="20dp"></ImageButton>
    <ImageButton
        android:id="@+id/imbt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_icons8_google"
      app:layout_constraintEnd_toStartOf="@id/textview4"
       app:layout_constraintTop_toBottomOf="@id/textview4"
        >

    </ImageButton>


    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="88dp"
        android:checked="true"
        android:switchMinWidth="56dp"
        android:text="Switch:"
        android:textOff="OFF"
        android:textOn="ON"
        app:layout_constraintEnd_toStartOf="@id/initial_text1"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>